# openll

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _config.yml  gloperate-config.cmake  plan.txt
_layouts/: default.html
css/: styles.scss
data/examples/: points.frag  rectangles.frag  rectangles.vert
data/shaders/: glyph.vert
fontface-generator/: index.html
fontface-generator/css/: styles.scss
fontface-generator/js/: fontface.js
ll-opengl/: CMakeLists.txt  openll-config.cmake
ll-opengl/cmake/: CompileOptions.cmake
ll-opengl/data/examples/: points.frag  points.vert
ll-opengl/data/fonts/: opensansr36.fnt
ll-opengl/data/fonts/opensansr144/: opensansr144.fnt
ll-opengl/data/fonts/opensansr36/: opensansr36.fnt
ll-opengl/data/fonts/opensansr72/: opensansr72.1024.1024.r.ub.raw  opensansr72.fnt
ll-opengl/data/shaders/: glyph.frag  glyph.geom  glyph.vert
ll-opengl/source/: CMakeLists.txt
ll-opengl/source/examples/: CMakeLists.txt
ll-opengl/source/examples/basic-text-display/: CMakeLists.txt  main.cpp
ll-opengl/source/examples/labeling-at-point/: CMakeLists.txt  PointDrawable.cpp  main.cpp
ll-opengl/source/examples/minimal-label/: CMakeLists.txt  datapath.inl  main.cpp
ll-opengl/source/examples/point-based-example/: CMakeLists.txt  main.cpp
ll-opengl/source/examples/pointbasedlayouting/: CMakeLists.txt  GeoData.cpp  GeoData.h  PointDrawable.cpp  PointDrawable.h  RectangleDrawable.cpp  RectangleDrawable.h  ScreenAlignedQuad.cpp  ScreenAlignedQuad.h  benchmark.cpp  benchmark.h  main.cpp
ll-opengl/source/examples/supersampling/: CMakeLists.txt  main.cpp
ll-opengl/source/examples/temp/: AdaptiveGrid.cpp  AdaptiveGrid.h  Navigation.cpp  Navigation.h  NavigationMath.cpp  NavigationMath.h
ll-opengl/source/examples/text-example/: CMakeLists.txt  main.cpp
ll-opengl/source/openll/: CMakeLists.txt
ll-opengl/source/openll/include/openll/: Alignment.h  Drawable.h  FontFace.h  FontLoader.h  Glyph.h  GlyphSequence.h  GlyphSequenceConfig.h  GlyphVertexCloud.h  LineAnchor.h  RawFile.h  SuperSampling.h  Typesetter.h
ll-opengl/source/openll/include/openll/layout/: LabelArea.h  RelativeLabelPosition.h  algorithm.h  layoutbase.h
ll-opengl/source/openll/include/openll/stages/: GlyphPreparationStage.h
ll-opengl/source/openll/source/: FontFace.cpp  FontLoader.cpp  Glyph.cpp  GlyphRenderer.cpp  GlyphSequence.cpp  GlyphSequenceConfig.cpp  GlyphVertexCloud.cpp  Typesetter.cpp
ll-opengl/source/openll/source/layout/: LabelArea.cpp  RelativeLabelPosition.cpp  algorithm.cpp
ll-opengl/source/tests/: CMakeLists.txt
ll-opengl/source/tests/openll-test/: CMakeLists.txt  FontLoader_test.cpp  LabelArea_test.cpp
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/point-based-example/: CMakeLists.txt  main.cpp
source/examples/pointbasedlayouting/: CMakeLists.txt  PointDrawable.cpp  PointDrawable.h  RectangleDrawable.cpp  RectangleDrawable.h  main.cpp
source/examples/text-example/: CMakeLists.txt  main.cpp
source/openll/: CMakeLists.txt
source/openll/include/openll/: Drawable.h  FontFace.h  FontLoader.h  Glyph.h  GlyphRenderer.h  GlyphSequence.h  GlyphVertexCloud.h  LineAnchor.h  Typesetter.h
source/openll/include/openll/layout/: algorithm.h  constantalgorithm.h  layoutbase.h
source/openll/include/openll/stages/: GlyphPreparationStage.h
source/openll/source/: Drawable.cpp  FontLoader.cpp  GlyphSequence.cpp  GlyphVertexCloud.cpp  RawFile.cpp  Typesetter.cpp
source/openll/source/layout/: algorithm.cpp  constantalgorithm.cpp  layoutbase.cpp
source/openll/source/stages/: GlyphPreparationStage.cpp
spec/: ll.xml
